@@ -49,30 +49,55 @@ let reset () =
   files_uncap := SMap.empty;
   dirs := []
 
-let get () = !dirs
-let get_paths () = List.map Dir.path !dirs
+let get () = List.rev !dirs
+let get_paths () = List.rev_map Dir.path !dirs
 
+let add_to_maps fn basenames files files_uncap =
+  List.fold_left (fun (files, files_uncap) base ->
+      let fn = fn base in
+      SMap.add base fn files,
+      SMap.add (String.uncapitalize_ascii base) fn files_uncap
+    ) (files, files_uncap) basenames
+
+(* Optimized version of [add] below, for use in [init] and [remove_dir]: since
+   we are starting from an empty cache, we can avoid checking whether a unit
+   name already exists in the cache simply by adding entries in reverse
+   order. *)
 let add dir =
-  let add_file base =
-    let fn = Filename.concat dir.Dir.path base in
-    files := SMap.add base fn !files;
-    files_uncap := SMap.add (String.uncapitalize_ascii base) fn !files_uncap;
+  let new_files, new_files_uncap =
+    add_to_maps (Filename.concat dir.Dir.path)
+      dir.Dir.files !files !files_uncap
   in
-  List.iter add_file dir.Dir.files;
-  dirs := dir :: !dirs
-
-let remove_dir dir =
-  let new_dirs = List.filter (fun d -> Dir.path d <> dir) !dirs in
-  if new_dirs <> !dirs then begin
-    reset ();
-    List.iter add (List.rev new_dirs)
-  end
-
-let add_dir dir = add (Dir.create dir)
+  files := new_files;
+  files_uncap := new_files_uncap
 
 let init l =
   reset ();
-  List.iter add_dir (List.rev l)
+  dirs := List.rev_map Dir.create l;
+  List.iter add !dirs
+
+let remove_dir dir =
+  let new_dirs = List.filter (fun d -> Dir.path d <> dir) !dirs in
+  if List.compare_lengths new_dirs !dirs <> 0 then begin
+    reset ();
+    List.iter add new_dirs;
+    dirs := new_dirs
+  end
+
+(* General purpose version of function to add a new entry to load path: We only
+   add a basename to the cache if it is not already present in the cache, in
+   order to enforce left-to-right precedence. *)
+let add dir =
+  let new_files, new_files_uncap =
+    add_to_maps (Filename.concat dir.Dir.path) dir.Dir.files
+      SMap.empty SMap.empty
+  in
+  let first _ fn _ = Some fn in
+  files := SMap.union first !files new_files;
+  files_uncap := SMap.union first !files_uncap new_files_uncap;
+  dirs := dir :: !dirs
+
+let add_dir dir = add (Dir.create dir)
 
 let is_basename fn = Filename.basename fn = fn
 
